force-app/main/default/objects/VisionModel__c/VisionModel__c.object-meta.xml
<CustomObject>
    <label>Vision Model</label>
    <nameField>
        <label>VisionModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vision Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>