force-app/main/default/objects/VisionModel__c/fields/Cutoff_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Percentage__c</fullName>
    <description>Don't show predictions with probabilities below this number.</description>
    <inlineHelpText>Don't show predictions with probabilities below this number.  Will show all if blank</inlineHelpText>
    <label>Cutoff Percentage</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>