force-app/main/default/objects/VisionModel__c/fields/Einstein_Trained_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Trained_Model_Id__c</fullName>
    <externalId>true</externalId>
    <label>Einstein Trained Model ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>