force-app/main/default/objects/VisionModel__c/fields/EinsteinID__c.field-meta.xml
<CustomField>
    <fullName>EinsteinID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>the ID on for this model on the Einstein APIs</inlineHelpText>
    <label>EinsteinID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>