force-app/main/default/objects/VisionModel__c/fields/Show_alternative_classifications__c.field-meta.xml
<CustomField>
    <fullName>Show_alternative_classifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Einstein will reply with the best guess, and if this box is checked, additional possible classifications</description>
    <inlineHelpText>Einstein will reply with the best guess, and if this box is checked, additional possible classifications</inlineHelpText>
    <label>Show alternative classifications</label>
    <type>Checkbox</type>
</CustomField>