force-app/main/default/objects/VisionModel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>EinsteinID__c</columns>
    <columns>Einstein_Trained_Model_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>